--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="dark_purpule">#0F7DC7</color>
     <color name="dark_green">#177103</color>
     <color name="gray1">#858C85</color>
-    <color name="primary_color">#565cce</color>
+    <color name="primary_color">#4248B6</color>
     <color name="second_color">#8d92fa</color>
     <color name="colorprimary">#0040FF</color>
     <color name="colorprimarydark">#10028F</color>
