--- a/app/src/main/res/layout/activity_next4trs.xml
+++ b/app/src/main/res/layout/activity_next4trs.xml
@@ -38,7 +38,7 @@
         <!-- Add your ImageViews here -->
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/imageView26"
             android:layout_width="112dp"
             android:layout_height="98dp"
             android:layout_marginStart="36dp"
@@ -49,7 +49,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView27"
             android:layout_width="109dp"
             android:layout_height="99dp"
             android:layout_marginStart="40dp"
@@ -60,7 +60,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageView28"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginStart="32dp"
@@ -71,7 +71,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/imageView4"
+            android:id="@+id/imageView29"
             android:layout_width="117dp"
             android:layout_height="98dp"
             android:layout_marginStart="36dp"
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="120dp"
-            android:text="Place of return. Left turns are prohibited"
+            android:text="Place of return"
             android:textSize="20dp"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
