--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/backTo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Go to Profile"
+                android:text="Go to Catgories"
                 android:layout_below="@id/score"
                 android:textSize="16sp"
                 android:layout_centerHorizontal="true">
