--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,48 +7,34 @@
     android:layout_height="match_parent"
     android:background="@color/skyblue"
     android:orientation="vertical">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="3.5">
-
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/blank_profile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/blank_profile"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
         <TextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="32dp"
-            android:text="User_Name"
-            android:textSize="20dp"
-            app:layout_constraintStart_toEndOf="@+id/blank_profile"
+            android:text="Categories"
+            android:textSize="40sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <ImageButton
             android:id="@+id/settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="28dp"
+            android:background="?attr/selectableItemBackground"
+            android:contentDescription="Button for performing a specific action"
+            android:onClick="onImageButtonClick"
             android:padding="16dp"
             android:src="@drawable/baseline_settings_24"
-            android:contentDescription="Button for performing a specific action"
-            android:background="?attr/selectableItemBackground"
-            android:onClick="onImageButtonClick"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -68,7 +54,6 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:foreground="?android:attr/selectableItemBackground"
             tools:ignore="MissingConstraints">
-
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="169dp"
@@ -83,9 +68,7 @@ Trafic Signs"
                     android:layout_height="57dp"
                     android:src="@drawable/baseline_menu_book_24"
                     android:layout_marginLeft="45dp"
-                    android:layout_gravity="bottom"
-                    >
-
+                    android:layout_gravity="bottom">
                 </ImageView>
         </FrameLayout>
         <FrameLayout
@@ -113,28 +96,24 @@ Trafic Signs"
                 android:layout_height="57dp"
                 android:src="@drawable/baseline_thumb_up_24"
                 android:layout_marginLeft="45dp"
-                android:layout_gravity="bottom"
-                >
-
+                android:layout_gravity="bottom">
             </ImageView>
         </FrameLayout>
-
         <FrameLayout
             android:id="@+id/frameButton3"
             android:layout_width="170dp"
             android:layout_height="170dp"
-            android:layout_margin="8dp"
+            android:layout_marginTop="32dp"
             android:background="@drawable/card_bg"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?android:attr/selectableItemBackground"
+            android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintRight_toLeftOf="parent"
-            android:padding="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
@@ -143,19 +122,13 @@ Trafic Signs"
                 android:text="Quiz Road Signs"
                 android:textColor="@android:color/black"
                 android:textSize="23sp" />
-
             <ImageView
                 android:layout_width="58dp"
                 android:layout_height="53dp"
-                android:src="@drawable/baseline_quiz_24"
                 android:layout_gravity="bottom"
                 android:layout_marginLeft="45dp"
-
-                >
-
+                android:src="@drawable/baseline_quiz_24">
             </ImageView>
-
-
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
