--- a/app/src/main/res/layout/activity_road_signs.xml
+++ b/app/src/main/res/layout/activity_road_signs.xml
@@ -48,9 +48,10 @@
             android:id="@+id/question_image"
             android:layout_width="100dp"
             android:layout_height="95dp"
-            android:layout_marginStart="152dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="32dp"
             android:src="@drawable/blank_profile"
+            app:layout_constraintBottom_toTopOf="@+id/text_question"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
