--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -89,6 +89,15 @@
                 android:text="Login"
                 android:textSize="18sp"
                 />
+            <Button
+                android:id="@+id/guest_mode"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/blue"
+                android:text="Guest Mode"
+                android:textSize="18sp"
+                />
 
             <TextView
                 android:id="@+id/logInRedirect"
