--- a/app/src/main/res/layout/activity_next4trs.xml
+++ b/app/src/main/res/layout/activity_next4trs.xml
@@ -81,7 +81,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
+        <Button
+            android:id="@+id/backToCategories"
+            android:layout_width="152dp"
+            android:layout_height="65dp"
+            android:layout_marginTop="608dp"
+            android:layout_marginEnd="4dp"
+            android:text="Categories"
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:layout_width="match_parent"
